tests/fixtures/errors/null_body_reassign.z
# null_body_reassign.z -- reassigning from a valueless (null-arm) match is
# rejected (E0100), mirroring the binding rule.

kind: variant {
    a: null
    b: null
}

main: function is {
    v: kind.a
    x: 1
    x = match (
        v
    ) case a then null else 5
    print "x=\{x}"
}
